archive/2022.07.bxl-k3s-pi/utils/ingress-nginx/custom-pages.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-page
  namespace: ingress-nginx
  labels:
    app: custom-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-page
  template:
    metadata:
      labels:
        app: custom-page
    spec:
      containers:
      - name: custom-page
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pages
          mountPath: /usr/share/nginx/html/index.html
          subPath: maintenance.html
          readOnly: true
      volumes:
      - name: pages
        configMap:
          name: pages

---

apiVersion: v1
kind: Service
metadata:
  name: custom-page
  namespace: ingress-nginx
spec:
  selector:
    app: custom-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
